fix 100 sonarqube issues + 4 security issues